# fis-falsch

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
src/components/: App.vue  ReportForm.vue  StationSelector.vue
src/server/: main.rs
static/: manifest.json
